# sakila-fastapi

./: .env.example  .pre-commit-config.yaml  Jenkinsfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  dependencies.py  engine.py  exceptions.py  main.py
app/api/controllers/: films.py
app/api/v1/routers/: countries.py  films.py
app/api/v1/schemas/: common.py  films.py
app/core/: config.py
app/crud/: films.py
app/db/: engine.py
app/db/models/: countries.py  film.py
app/db/repositories/: films.py
app/dtos/: common.py
app/entity/: film.py
app/enums/: common.py  films.py
app/models/: film.py
app/routers/: films.py
app/schemas/: films.py
app/tests/: conftest.py  films.py
app/utils/: pagination.py
tests/: conftest.py
tests/api/: test_films.py
