[tool.poetry]
name = "sakila"
version = "0.1.0"
description = ""
authors = ["Manuel Garcia <31109774+Mandroide@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
poetry-core = "^2.1.3"
pydantic-settings = "==2.9.1"
sqlmodel = "==0.0.24"
email-validator = "==2.2.0"
python-multipart = "==0.0.20"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
