[tool.poetry]
name = "sakila"
version = "0.1.0"
description = ""
authors = ["Manuel Garcia <31109774+Mandroide@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
poetry-core = "^2.1.3"
pydantic-settings = ">=2.1"
sqlmodel = "==0.0.24"
email-validator = "==2.2.0"
python-multipart = "==0.0.20"
pymysql = "^1.1.1"
httpx = "==0.28.1"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic-settings = ">=2.1"
sqlmodel = "==0.0.24"
email-validator = "==2.2.0"
python-multipart = "==0.0.20"
pymysql = "^1.1.1"
httpx = "==0.28.1"
pre-commit = "^4.2.0"
coverage = "^7.8.2"
flake8 = "^7.2.0"
mypy = "1.16.0"
pylint = "^3.3.7"
pydantic = {extras = ["mypy"], version = "^2.11.5"}
sqlalchemy = ">=2.0"


[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy",
    "pydantic.v1.mypy"             # still needed because SQLModel = Pydantic v1
]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
