[tool.poetry]
name = "sakila"
version = "0.1.0"
description = ""
authors = ["Manuel Garcia <31109774+Mandroide@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.34.3" }
pydantic-settings = "^2.9.1"
sqlmodel = "^0.0.24"
email-validator = "^2.2.0"
python-multipart = "^0.0.20"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.33"
httpx = "==0.28.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
coverage = "^7.8.2"
mypy = "1.10.1"
black = "^25.1.0"
ruff = "^0.11.12"
pytest = "^8.4.0"
pytest-xdist = "^3.7.0"

[tool.poetry.scripts]
sakila = "app.main:app"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.v1.mypy"             # still needed because SQLModel = Pydantic v1
]
strict = true

[tool.ruff]
line-length = 88
extend-select = ["I"] # import-sorter


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
poetry-core = "^2.1.3"
